# auto-commenter

./: README.md  main.py  pyproject.toml
app/: commenter.py  config.py  llm_client.py  prompts.py  reddit_client.py
backend/: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  routes.py  ruff.toml
backend/app/: async_reddit_client.py  auto_commenter.py  cli_commenter.py  commenter.py  config.py  constants.py  llm_client.py  logger.py  reddit_client.py  routes.py
backend/app/api/: routes.py
backend/app/scripts/: auto_commenter.py  cli_commenter.py
backend/app/services/: async_reddit_client.py  llm_client.py
backend/scripts/: daily_commenter.sh  test_bot.sh
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts
frontend/types/: api.ts
