[project]
name = "auto-commenter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpraw>=7.8.1",
    "fastapi[standard]>=0.116.1",
    "langchain-google-genai>=2.1.8",
    "praw>=7.8.1",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
